# gooroom-software

./: README.md  gnome-software_3.26.3.orig.tar.xz.delta  gnome-software_3.26.3.orig.tar.xz.id  gnome-software_3.26.5.orig.tar.xz.delta  gnome-software_3.26.5.orig.tar.xz.id  gnome-software_3.27.90.orig.tar.xz.delta  gnome-software_3.27.90.orig.tar.xz.id  gnome-software_3.27.92.orig.tar.xz.delta  gnome-software_3.27.92.orig.tar.xz.id  gnome-software_3.28.0.orig.tar.xz.delta  gnome-software_3.28.0.orig.tar.xz.id  gnome-software_3.28.1.orig.tar.xz.delta  gnome-software_3.28.1.orig.tar.xz.id  gnome-software_3.28.2.orig.tar.xz.delta  gnome-software_3.28.2.orig.tar.xz.id  gnome-software_3.30.0.orig.tar.xz.delta  gnome-software_3.30.0.orig.tar.xz.id  gnome-software_3.30.1.orig.tar.xz.delta  gnome-software_3.30.1.orig.tar.xz.id  gnome-software_3.30.5.orig.tar.xz.delta  gnome-software_3.30.5.orig.tar.xz.id  gnome-software_3.30.6.orig.tar.xz.delta  gnome-software_3.30.6.orig.tar.xz.id  gnome-software_3.31.90.orig.tar.xz.delta  gnome-software_3.31.90.orig.tar.xz.id  gooroom-software_3.30.6.orig.tar.gz.delta  meson.build  meson_options.txt
data/: kr.gooroom.software.external-appstream.policy.in  kr.gooroom.software.gschema.xml  meson.build
data/appdata/: kr.gooroom.Software.appdata.xml.in  meson.build
data/assets/: kr.gooroom.Software.Featured.xml  meson.build
data/icons/hicolor/: meson.build
debian/: changelog  control  control.in  copyright  gooroom-software-common.install  gooroom-software-dev.install  gooroom-software-doc.install  gooroom-software-plugin-flatpak.install  gooroom-software-plugin-snap.install  gooroom-software.gsettings-override  gooroom-software.gsettings-override.in  gooroom-software.install  rules  source_gooroom-software.py
lib/: gooroom-software.pc.in  gs-app.c  gs-app.h  gs-plugin-job-private.h  gs-plugin-job.c  gs-plugin-job.h  gs-plugin-loader.c  gs-plugin-types.h  gs-plugin-vfuncs.h  gs-plugin.c  gs-self-test.c  gs-utils.c  gs-utils.h  meson.build
plugins/: meson.build
po/: POTFILES.in  en_GB.po  ko.po
src/: gnome-software.gresource.xml  gnome-software.ui  gnome-software_popover.ui  gooroom-software-editor.xml  gooroom-software-local-file.desktop.in  gooroom-software-service.desktop.in  gooroom-software.ui  gooroom-software.xml  gs-app-addon-row.c  gs-app-addon-row.ui  gs-app-row.c  gs-app-row.ui  (+52 more)
(+28 files in other folders)
