install_data('scalable/gooroom-software.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/kr.gooroom.Software-symbolic.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/gr-software-installed-symbolic.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
