install_data('scalable/kr.gooroom.Software-symbolic.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/gr-software-installed-symbolic.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-menu-home.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-menu-category.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-menu-delete.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-menu-update.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-toolbar-rest.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-menu-right-arrow.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-app-empty.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/kr.gooroom.Software.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-os.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('scalable/software-toolbar-previous.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
